@@ -1,6 +1,8 @@
 1.0.14 (2016-XX-XX)
   * Added fields setSerializeOutput and getSerializeOutput to RClient4Java
     class.
+  * Guard elements of the scalaInterpreter from access by the user through the
+    '$' operator. 
 
 1.0.13 (2016-07-07)
   * Added %@% operator for shorthand notation (e.g, "interpreter %@% snippet")
